<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_googlePlus_AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/googlePlus"/>

        <Button
            android:id="@+id/btn_twitter_AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/twitter"/>

        <Button
            android:id="@+id/btn_facebook_AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/facebook"/>
        <Button
            android:id="@+id/btn_vk_AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vk"/>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/container_AM"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </FrameLayout>


</LinearLayout>
