<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_signIn_FGP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"/>

        <Button
            android:id="@+id/btn_signOut_FGP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/sign_out"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_statusLabels_FGP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/status"/>

    <TextView
        android:id="@+id/tv_aboutMe_FGP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />

    <ImageView
        android:id="@+id/iv_photoUser_FGP"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_textShare_FGP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>

        <Button
            android:id="@+id/btn_share_FGP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/share"/>
    </RelativeLayout>

</LinearLayout>